--- a/server1/.env
+++ b/server1/.env
@@ -1,4 +1,4 @@
 MONGODB_URL=mongodb+srv://rohini-ai:FVUvXrVUtnAgdJX8@cluster0.i5jm7vn.mongodb.net/ai-image-db
-JWT_SECRET=yoursecretkey
+JWT_SECRET=rohinichellappan@2742
 CURRENCY=INR
 PORT=4000
